Resolve bugs from merging